Thu Jul 15 12:33:55 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/CoherentChangeControl.cpp:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        
          Fixed nightly build compile errors.
        
        * dds/DCPS/Definitions.h:
        
          Fixed nightly build warning. LONG_MAX and LONG_MIN
          are actually the unsigned long max and min for 
          linux.

Wed Jul 14 20:56:38 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/Definitions.h:

          Changed to use ACE_INT32.  Made SequenceNumber a class
          and provided accessors to value_.  Also made a typedef
          for ACE_INT32 to use when a SequenceNumber value is not
          being stored in a SequenceNumber.

        * dds/DCPS/transport/multicast/MulticastTypes.h:

          Removed redundant type.

        * dds/DCPS/ReceivedDataElementList.h:
        * dds/DCPS/SubscriptionInstance.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
        * dds/DCPS/transport/framework/TransportHeader.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/CoherentChangeControl.cpp:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
        * tests/DCPS/FooTest4/Writer.cpp:

          Changed to use SequenceNumber::Value and getValue().

        * dds/DCPS/transport/multicast/ReliableSession.h:
        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Changed to pass SequenceNumber instead of internal
          value.  And changed to use SequenceNumber::Value
          and getValue().

        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Int16 to Int32 changes and removed unused depth function.
